# vndr

./: .gitignore  CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md
.github/: constants.env  dependabot.yml
.github/workflows/: auto-clang-format.yml  ci.yml
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/VandiorCore/: headersCore.hpp
include/rsvandior/: my_header.h  my_header_wrapper.hpp
include/vndr/: sample_library.hpp  trasformer.hpp  vandior.hpp
include/vndr/lexer/: Tokenizer.hpp  TokenizerUtility.hpp
include/vndr/parser/: Parser.hpp
rsvandior/: Cargo.toml  cbindgen.toml
rsvandior/include/: mylib.h
rsvandior/src/: lib.rs
rsvandior/src/lexer/: tokenizer.rs
rsvandior/src/token/: code_source_location.rs  mod.rs  token.rs  token_list.rs  token_type.rs
src/Vandior/: CMakeLists.txt  Costanti.hpp  main.cpp
src/Vandior_Core_lib/: CMakeLists.txt
src/Vandior_Lib/: CMakeLists.txt  vandior.cpp
src/Vandior_Lib/lexer/: Token.cpp  Tokenizer.cpp  TokenizerUtility.cpp
src/Vandior_Lib/parser/: AST.cpp  ASTNode.cpp  ArrayNode.cpp  BinaryExpressionNode.cpp  IndexNode.cpp  NullptrNode.cpp  NumberNode.cpp  Parser.cpp  Statement.cpp  TypeNode.cpp  UnaryExpressionNode.cpp  VariableNode.cpp
src/Vandior_Lib/transpiler/: ProjectBuilder.cpp  Transpiler.cpp
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp
vnbuild/src/: input.cpp
